# vibetorrent-v2

./: .env  .gitignore  Cargo.toml  Cross.toml  README.md  package-lock.json  package.json  tailwind.config.js
.github/: copilot-instructions.md
.github/workflows/: build-mips.yml
src/: config.rs  error.rs  main.rs  routes.rs  rtorrent.rs  sse.rs  state.rs  templates.rs
src/services/: torrents.rs
static/: manifest.json
static/css/: input.css  output.css
templates/: base.html  index.html  setup.html
templates/partials/: add_torrent_modal.html  sidebar_counts.html  stats.html  torrent_list.html  torrent_oob.html  torrent_row.html
