[package]
name = "vibetorrent"
version = "0.1.0"
edition = "2021"
description = "Modern rTorrent Web UI with Rust + Askama + HTMX + Hyperscript + Tailwind"
authors = ["VibeTorrent"]

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "compression-gzip", "cors"] }

# Templating
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# XML-RPC for rTorrent SCGI
quick-xml = "0.37"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment and config
dotenvy = "0.15"

# HTTP client for SCGI
bytes = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# File handling
mime_guess = "2"
tempfile = "3"

# Embed static files into binary
rust-embed = "8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
